[package]
name = "bftp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["json"] }
rustyline = "18.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
urlencoding = "2.1.3"
