[package]
name = "bftp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
thiserror = "2"
indicatif = "0.17"
regex = "1.12.3"
md5 = "0.7.0"
reqwest = { version = "0.13.3", features = ["json", "multipart", "stream"] }
rustyline = "18.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "time"] }
urlencoding = "2.1.3"
